--- a/quiz.html
+++ b/quiz.html
@@ -283,9 +283,9 @@
     Se você usar nomes de arquivo diferentes, basta atualizar a seção `soundFiles` no código:
     ```javascript
     const soundFiles = {
-        click: 'sounds/meu-clique.wav',
-        correct: 'sounds/acerto.mp3',
-        incorrect: 'sounds/erro.ogg'
+        click: 'sounds/click.mp3',
+        correct: 'sounds/correct.mp3',
+        incorrect: 'sounds/wrong.mp3'
     };
     ```
 
