--- a/quiz.html
+++ b/quiz.html
@@ -112,7 +112,7 @@
         const soundFiles = {
             click: 'sounds/click.mp3',
             correct: 'sounds/correct.mp3',
-            incorrect: 'sounds/wrong.mp3'
+            incorrect: 'sounds/incorrect.mp3'
         };
 
         // Elementos da UI
